# multi_ellip

./: .gitignore  Cargo.toml  README.md  analyse_blend.py  compare_exact.py  compare_runs.py  conv25_analysis.py  conv25_early.py  conv25_nd2_dt0p005.txt  conv25_nd2_dt0p01.txt  conv25_nd2_dt0p02.txt  conv25_nd3_dt0p005.txt  conv25_nd3_dt0p01.txt  conv25_nd3_dt0p02.txt  conv25_nd4_dt0p005.txt  conv25_nd4_dt0p01.txt  conv25_nd4_dt0p02.txt  conv25_plot.py  conv2nd_gates.py  conv2nd_gates2.py  conv2nd_nd2_t25_dt0p005.txt  conv2nd_nd2_t25_dt0p01.txt  conv2nd_nd2_t25_dt0p02.txt  conv2nd_nd2_t2_dt0p0025.txt  conv2nd_nd2_t2_dt0p005.txt  conv2nd_nd2_t2_dt0p01.txt  conv2nd_nd2_t2_dt0p02.txt  conv2nd_nd3_t25_dt0p01.txt  conv_nd2_dt0p005.txt  conv_nd2_dt0p01.txt  conv_nd2_dt0p02.txt  conv_nd3_dt0p005.txt  conv_nd3_dt0p005_t025.txt  conv_nd3_dt0p01.txt  conv_nd4_dt0p005_t025.txt  conv_nd4_dt0p01.txt  convergence_order.py  exact_added_mass.py  input.txt  input_one_ellip.txt  (+7 more)
docs/: development_record.md  impulse_method_subsection.tex  reduced_metric_integrator.md  rejected_solver_optimizations.md  solver_equations.tex  solver_theory_reduced_metric.tex
docs/paper_figures/: README.md  default_grid_error_summary.csv  exact_singular_convergence_orders.csv  exact_singular_energy_summary.csv
src/: lib.rs  main.rs
src/Ellipsoids/: body.rs  elliptics.rs  mod.rs  state.rs
src/bem/: bem_for_ode.rs  exact_geometry.rs  geom.rs  gmres.rs  integ.rs  mod.rs  potentials.rs  stacking.rs
src/ellipsoids/: body.rs  elliptics.rs  mod.rs
src/math/: anderson.rs  (+2 more)
tests/: exact_singular_sphere.rs
(+2675 files in other folders)
