[package]
name = "multi_ellip"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Boyd", "Erich Essmann"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = "1.0.136"
nalgebra = { version = "0.32.1", features = ["default", "serde-serialize"] }
num = "0.4.0"
num-traits = "0.2.15"
simba = "0.7.1"
thiserror = "1.0.30"
#plotters = "0.3"
fast-float = "0.2.0"
rayon = "1.5.2"
indicatif = {version = "0.17.0", features = ["rayon"]}
nom = "7.0.0"
#colorous = "1.0.9"
#palette = "0.6.1"